# sycl-streamlines

./: CMakeLists.txt  README.md  array3d_sycl.h  array3d_sycl_1.h  array3d_sycl_old.h  floatn.hpp  hdf5_field_sycl.cpp  hdf5_field_sycl.h  run.sh  streamlines.cpp  streamlines_man.cpp
documents/1. Tema/: Tema.md  bibliography.bib
documents/2. Plan/: .gitignore  bibliography.bib  plan.tex
documents/2. Plan/Sections/: config.tex  title.tex
documents/2. Plan/svg-inkscape/: DiagramaMetodologia.drawio_svg-tex.pdf_tex  DiagramaMetodologia_svg-tex.pdf_tex  Mape-k_svg-tex.pdf_tex  Patent documents by Published, Filed and Granted Date_svg-tex.pdf_tex
documents/3. Proyecto/: .gitignore  bibliography.bib  main.app  main.tex  notes.md
documents/3. Proyecto/drawio/: ApplicationNotion.drawio  Architecture Diagram.drawio  ArquitecturaSmartCampusUis.drawio  BranCompare.drawio  BranProcess.drawio  BranProcessExecuter.drawio  BranProcessPlanner.drawio  Directives.drawio  DoThingAddition.drawio  DoThingProcess.drawio  DoThingProcessPlanner.drawio  DoThingReconfig.drawio  DoThingRestart.drawio  HenryModelo.drawio  LexicalComponentsFlow.drawio  LexicalDataRqeFlow.drawio  LexicalFlow.drawio  LexicalLocationsFlow.drawio  LookerProcess.drawio  LookerProcessClock.drawio  LookerProcessUpdateState.drawio  Mape-k.drawio  Metamodel B.drawio  Metamodel Tagless.drawio  Metamodel.drawio  ScenarioA.drawio  (+15 more)
documents/4. Presentaciones/: Notación.md
dpct_output/: MainSourceFiles.yaml  array3d.h.yaml  cudautil.h  cudautil.h.yaml  cutil_math.h  cutil_math.h.yaml  nrrd_field.h  nrrd_field.h.yaml
(+129 files in other folders)
